# TFG

Codigo/Algoritmo aproximacion HP/: HP_prot.h  aprox.cpp  aprox.py  proteins.py  prueba.txt  result.txt
Codigo/Algoritmo aproximacion HPNX/: aprox_hpnx.py
Codigo/Algoritmo genetico HP/: genetic_hp.py  genetic_hp_2_cross.py
Codigo/Comparaciones/: Untitled.ipynb  aprox.py  convert.py  friedman.py  generador_ejemplos.py  genetic_hp.py  input.txt  input_small.txt  input_very_large.txt  main.py  proteins.py  prueba.py  result.txt  result2.txt  result3.txt  result4.txt  result5.txt  result6.txt  result7.txt  results_accum.txt
Codigo/Comparaciones HP/: aprox.py  ejemplos.txt  genetic_hp.py  input.txt  input_large.txt  input_medium.txt  main.py  prueba.py  result2.txt  result3.txt  result5.txt  result7.txt
Codigo/Comparaciones HPNX/: aprox_hpnx.py  friedman.py  generador_ejemplos.py  genetic_hpnx.py  input.txt  input_very_large.txt  main.py  proteins.py  prueba.py  result1.txt  result2.txt  result3.txt  result4.txt  result5.txt  result6.txt
Codigo/Comparaciones HPvsHPNX/: aprox.py  aprox_hpnx.py  friedman.py  generador_ejemplos.py  genetic_hpnx.py  hp_proteins.py  hpnx_proteins.py  input.txt  input2.txt  input_large.txt  input_large_ant.txt  input_medium.txt  input_medium_ant.txt  input_small.txt  input_small_ant.txt  input_very_large.txt  main.py  prueba.py  result.txt  result1_gen.txt  result2.txt  result2_gen.txt  result3.txt  result3_gen.txt  result4.txt  result5.txt
Codigo/Comparaciones/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
Codigo/Comparaciones/biu-2.3.7/: ChangeLog  Makefile.in  configure
Codigo/Comparaciones/cpsp-2.4.6/: AUTHORS  ChangeLog  INSTALL  LICENSE  Makefile.am  Makefile.in  README  TODO  configure  configure.ac  configure~
Codigo/Comparaciones/cpsp-2.4.6/CoreDB/Cubic/1/: cub.1.0.txt
Codigo/Comparaciones/cpsp-2.4.6/CoreDB/Cubic/10/: cub.10.11.txt  cub.10.12.txt  cub.10.13.txt  cub.10.14.txt  cub.10.15.txt
Codigo/Comparaciones/cpsp-2.4.6/CoreDB/Cubic/2/: cub.2.1.txt
Codigo/Comparaciones/cpsp-2.4.6/CoreDB/Cubic/3/: cub.3.2.txt
Codigo/Comparaciones/cpsp-2.4.6/CoreDB/Cubic/4/: cub.4.3.txt  cub.4.4.txt
Codigo/Comparaciones/cpsp-2.4.6/CoreDB/Cubic/5/: cub.5.4.txt  cub.5.5.txt
Codigo/Comparaciones/cpsp-2.4.6/CoreDB/Cubic/6/: cub.6.5.txt  cub.6.6.txt  cub.6.7.txt
Codigo/Comparaciones/cpsp-2.4.6/CoreDB/Cubic/7/: cub.7.6.txt  cub.7.7.txt  cub.7.8.txt  cub.7.9.txt
Codigo/Comparaciones/cpsp-2.4.6/CoreDB/Cubic/8/: cub.8.10.txt  cub.8.12.txt  cub.8.7.txt  cub.8.8.txt  cub.8.9.txt
Codigo/Comparaciones/cpsp-2.4.6/CoreDB/Cubic/9/: cub.9.10.txt  cub.9.11.txt  cub.9.12.txt  cub.9.13.txt  cub.9.9.txt
Codigo/Comparaciones/cpsp-2.4.6/autom4te.cache/: output.0  output.2  requests  traces.0  traces.2
Codigo/Comparaciones/cpsp-2.4.6/misc/: Makefile.am  Makefile.in
Codigo/Comparaciones/cpsp-2.4.6/misc/doxygen/: Makefile.am  Makefile.in  doxygen.config  header.html  stylesheet.css
Codigo/Comparaciones/cpsp-2.4.6/src/: Makefile.am  Makefile.in  doxygen.hh  doxygen.hh.in
Codigo/Comparaciones/cpsp-2.4.6/src/cpsp/: Exception.cc  Exception.hh  HCore.cc  HCore.hh  HCoreDatabase.hh  HCoreDatabaseFILE.cc  HCoreDatabaseFILE.hh  HPThreadingHandler.hh  HPThreadingOptions.cc  HPThreadingOptions.hh  Makefile.am  Makefile.in  PDBsupport.hh
Codigo/Comparaciones/cpsp-2.4.6/src/cpsp/SideChain/: Makefile.am  Makefile.in  chain_threading.cpp  chain_threading.h  chain_threading_all.cpp  chain_threading_all.h
Codigo/Comparaciones/cpsp-2.4.6/src/cpsp/SideChain/options/: chain_option.cpp  chain_option.h  protein_like_option.cpp  protein_like_option.h  side_chain_optdeg_option.cpp  side_chain_optdeg_option.h
Codigo/Comparaciones/cpsp-2.4.6/src/cpsp/gecode/: GC_FirstSolBranching.hh  GC_FirstSolBranching.icc  GC_HPThreading.cc  GC_HPThreading.hh  GC_LatticeNeighbored2.cc  GC_LatticeNeighbored2.hh  GC_RankViewSel.hh  GC_RankViewSel.icc  GC_Search.hh  GC_StlSetRangeIterator.cc  GC_StlSetRangeIterator.hh  GC_ThreadingSpace.cc  GC_ThreadingSpace.hh  GC_ThreadingSuperSpace.hh  GC_ThreadingSymmBreaker.hh  GC_ValNearCenter.cc  GC_ValNearCenter.hh  GC_searchExt.hh  Makefile.am  Makefile.in  gecodeExtensions.hh  symm-break.icc
Codigo/Comparaciones/cpsp-2.4.6/tests/: Makefile.am  Makefile.in  testHCore.cc  testHCore.verified  testHCoreDatabaseFILE.cc  testHCoreDatabaseFILE.verified
Codigo/Comparaciones/gecode-release-6.2.0/: configure
Codigo/Pruebas_GDT/: genetic_hp.py  prueba.py  result.txt  resultados_it_0.txt  resultados_it_10.txt  resultados_it_14.txt  resultados_it_17.txt  resultados_it_18.txt  resultados_it_2.txt  resultados_it_22.txt  resultados_it_23.txt  resultados_it_24.txt  resultados_it_25.txt  resultados_it_27.txt  resultados_it_28.txt  resultados_it_29.txt  resultados_it_30.txt  resultados_it_32.txt  resultados_it_36.txt  resultados_it_4.txt  resultados_it_42.txt  resultados_it_5.txt  resultados_it_8.txt
Codigo/Pruebas_GDT/Prueba1/: parametros.txt  resultados_it_0.txt  resultados_it_1.txt  resultados_it_2.txt  resultados_it_3.txt  resultados_it_4.txt  resultados_it_5.txt
Codigo/Pruebas_GDT/Prueba2/: parametros.txt  resultados_it_0.txt  resultados_it_1.txt  resultados_it_2.txt  resultados_it_3.txt  resultados_it_4.txt
Codigo/Pruebas_GDT/Prueba3/: parametros.txt  prueba.py  resultados_it_0.txt  resultados_it_1.txt  resultados_it_10.txt  resultados_it_11.txt  resultados_it_12.txt  resultados_it_13.txt  resultados_it_14.txt  resultados_it_15.txt  resultados_it_16.txt  resultados_it_17.txt  resultados_it_18.txt  resultados_it_19.txt  resultados_it_2.txt  resultados_it_3.txt  resultados_it_4.txt  resultados_it_5.txt  resultados_it_6.txt  resultados_it_7.txt  resultados_it_8.txt  resultados_it_9.txt
Codigo/Pruebas_GDT/Prueba4/: parametros.txt  resultados_it_0.txt  resultados_it_1.txt  resultados_it_10.txt  resultados_it_11.txt  (+19 more)
Codigo/Supergenetico hHPNX/: supergenetic.py
Latex/: TFGTeXiS.tex  biblio.bib
Latex/Capitulos/: Introduccion.tex
Latex/Cascaras/: agradecimientos.tex  cover.tex  dedicatoria.tex
Latex/TeXiS/: TeXiS_cover.tex
(+176 files in other folders)
